Fixed confetti width on small screen, styled header, added wood-table image

--- a/css/custom.css
+++ b/css/custom.css
@@ -119,7 +119,7 @@ form {
         height: auto;
         margin: 0;
         outline: 0;
-        padding: 15px;
+        padding: 7px;
         width: 100%;
         background-color: #e8eeef;
         color: #8a97a0;
